# translator-chat-bot

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.agents/plan/: prd.md
.claude/: CLAUDE.md
docs/: SETUP.md
src/translator_bot/: __init__.py  config.py  handlers.py  main.py  models.py  smoketest.py  translator.py  whatsapp.py
tests/: test_config.py  test_handlers.py
